# PSGOUV-CI-2023-ANALYSIS

./: LICENSE  README.md  app.py  data_loader.py  pyproject.toml  utils.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
config/: css.py  settings.py
data/: psgouv_2023_data.csv
notebooks/: data_profiling.ipynb
