[project]
name = "psgouv-2023"
version = "0.1.0"
description = "Tableau de bord des réalisations du PSGOUV 2023 en Côte d'Ivoire."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
